--- a/fe/public/style.css
+++ b/fe/public/style.css
@@ -1,60 +1,15 @@
-// LoginForm 에 쓰는 font ppop
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-
 body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #000000; 
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    align-items: center;
-    min-height: 100vh;
-    
+    background-color: #000000;
 }
 
 #app {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(27, 62, 17);
-}
-
-.spritePosition {
-    margin: 10px 0 0 10px;
-    font-size: 0.8em;
-}
-
-.button {
-    width: 140px;
-    margin: 10px;
-    padding: 10px;
-    background-color: #000000;
-    color: rgba(255, 255, 255, 0.87);
-    border: 1px solid rgba(255, 255, 255, 0.87);
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-        border: 1px solid #0ec3c9;
-        color: #0ec3c9;
-        text-decoration: underline;
-
-    }
-
-    &:active {
-        background-color: #0ec3c9;
-    }
-
-    /* Disabled styles */
-    &:disabled {
-        cursor: not-allowed;
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        color: rgba(255, 255, 255, 0.3);
-    }
 }
