axios 게스트접속,방생성 진행중

--- a/fe/src/pages/Lobby/Loby.css
+++ b/fe/src/pages/Lobby/Loby.css
@@ -9,9 +9,15 @@
     justify-content: center;
 }
 
+form {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
 
 h1 {
     margin:10px;
+    color: #333;
 }
 
 button {
