refactor: CSS id, className 이름 Kebab 케이스로 통일

--- a/fe/src/pages/Lobby/Lobby.css
+++ b/fe/src/pages/Lobby/Lobby.css
@@ -57,7 +57,7 @@ button {
     border: white;
 }
 
-.wrapper .navigateRoom {
+.wrapper .navigation-room {
     display: flex;
     padding: 10px;
 }
