--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -4,19 +4,20 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 0 5%;
+    padding-top: 3%;
     background-image: url("image/title-background.png");
     background-size: 100% 100%;
+    cursor: url("rpgui/img/cursor/default.png");
 }
 
 #logo-area {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: -4%;
 }
 
 #logo-img {
-    width: 30%;
+    width: 35%;
 }
 
 .wrapper {
@@ -24,6 +25,7 @@
     width: 25%;
     overflow: hidden;
     margin: 0 auto;
+    background-color: transparent;
 }
 
 .wrapper .form-box {
@@ -31,7 +33,7 @@
     left: 0;
     width: 100%;
     padding: 30px 40px;
-    background: rgba(103, 119, 78, 0.332);
+    /* background: rgba(103, 119, 78, 0.332); */
     box-sizing: border-box;
     transition: transform 0.3s ease;
 }
@@ -51,56 +53,39 @@
     transform: translateX(0);
 }
 
+.input-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
 .form-box h1 {
-    color: #fff;
-    font-size: 36px;
+    color: white;
+    /* font-size: 36px; */
     text-align: center;
+    font-family: "MoveSans-Bold";
 }
 
 .form-box .input-box {
     position: relative;
     width: calc(100% - 25px); /* 25px 왼쪽 패딩 + 24px 테두리 */
-    height: 50px;
-    margin: 30px 0;
+    height: 3rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .form-box .input-box input {
-    background: transparent;
-    padding-left: 25px;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, 0.2);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
+    height: 2rem;
 }
 
 form .input-box input::placeholder {
-    color: #fff;
+    /* color: #fff; */
 }
 
 form .input-box .icon {
     top: 100% !important;
-}
-
-.form-box button {
-    margin-top: 30px;
-    border-radius: 20px;
-    border: none;
-    width: 100%;
-    height: 45px;
-    background: #fff;
-    font-size: 16px;
-    color: #333;
-    font-weight: 700;
-    cursor: pointer;
-}
-
-form .guest {
-    margin: 0px;
-    border-radius: 5px;
-    border: none;
-    background: rgb(0, 0, 0);
-    color: #fff;
 }
 
 form .register-link {
@@ -116,4 +101,8 @@ form .register-link {
 
 .register-link p a:hover {
     text-decoration: underline;
+}
+
+#register-btn {
+    width: 10rem;
 }
