--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -16,12 +16,12 @@
 }
 
 #logo-img {
-    width: 35%;
+    width: 35rem;
 }
 
 .wrapper {
     display: flex;
-    width: 25%;
+    width: 25rem;
     overflow: hidden;
     margin: 0 auto;
     background-color: transparent;
@@ -30,7 +30,7 @@
 .wrapper .form-box {
     position: absolute;
     left: 0;
-    width: 100%;
+    width: 25rem;
     transition: transform 0.3s ease;
 }
 
