--- a/fe/public/style.css
+++ b/fe/public/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    color: rgba(255, 255, 255, 0.87);
+    /* color: rgba(255, 255, 255, 0.87); */
     background-color: #000000;
 }
 
