--- a/fe/src/pages/WaitingRoom/WaitingRoom.css
+++ b/fe/src/pages/WaitingRoom/WaitingRoom.css
@@ -1,4 +1,15 @@
 /* 전체 대기실 스타일 */
+#container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding-top: 3%;
+    background-image: url("image/title-background.png");
+    background-size: 100% 100%;
+}
+
 .waiting-room {
     display: flex;
     position: relative;
