style:게스트버튼수정

--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -95,3 +95,8 @@ form .register-link {
     display: flex;
     justify-content: space-around;
 }
+
+.button-box .guest{
+    /* background-color: white; */
+    width: 303px;
+}
