--- a/fe/src/pages/WaitingRoom/WaitingRoom.css
+++ b/fe/src/pages/WaitingRoom/WaitingRoom.css
@@ -1,5 +1,25 @@
-/* 전체 대기실 스타일 */
+.wrapper {
+    position: relative;
+    width: 420px;
+    height: 520px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: aliceblue;
+    justify-content: center;
+    text-align: center;
+
+    .rpgui-content h2 {
+    font-size: 1.7em !important;
+    font-family: "MoveSans-Bold";
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+/* 전체 스타일 */
 .waiting-room {
+    position: relative;
     width: 100%;
     max-width: 50rem;
     margin: 0 auto;
@@ -15,34 +35,35 @@
     margin: 1rem 0;
 }
 
-/* 플레이어 슬롯 */
+/* 플레이어 슬롯 스타일 */
 .player-slot {
-    border: 0.5rem solid #000;
     padding: 0.5rem;
+    text-align: center;
+}
+
+/* 비어 있는 슬롯 스타일 */
+.player-slot.empty {
+    background-color: #e0e0e0;
+    border: 1px dashed #ccc;
 }
 
 /* 채팅창 */
 .chat-box {
     border: 0.5rem solid #000;
-    height: 12rem;
+    height: 5rem;
     overflow-y: auto;
     margin: 1rem 0;
     padding: 0.5rem;
     text-align: left;
+    color : white;
+
 }
 
-/* 버튼 스타일 */
-.button {
-    padding: 0.5rem 1rem;
-    margin: 0.3rem;
-    background-color: #f0f0f0;
-    border: none;
-    cursor: pointer;
-}
 
 /* 카운트다운 표시 */
 .countdown-display,
 .countdown-message {
     font-weight: bold;
-    margin: 0.5rem 0;
+    font-family: "MoveSans-Bold";
+    color: white;
 }
