--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -5,9 +5,25 @@
     width: 100%;
     height: 100%;
     padding-top: 3%;
-    background-image: url("/image/title-background.png");
-    background-size: 100% 100%;
-}
+    background-image: url("/image/pixel-background.png");
+    background-size: 100%;
+    /* 또는 100% 100%로 유지할 수 있습니다 */
+    background-repeat: repeat-x;
+    /* 수평으로 반복 */
+    animation: scroll-background 100s linear infinite;
+    /* 애니메이션 추가 */
+    }
+    
+    /* 애니메이션 정의 */
+    @keyframes scroll-background {
+        0% {
+            background-position: 0 0;
+        }
+    
+        100% {
+            background-position: -1920px 0;
+        }
+    }
 
 #logo-area {
     display: flex;
