--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -6,7 +6,7 @@
     height: 100%;
     padding-top: 3%;
     background-image: url("/image/pixel-background.png");
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: repeat-x;
     /* 수평으로 반복 */
     animation: scroll-background 100s linear infinite;
