--- a/fe/src/pages/LoginForm/LoginForm.css
+++ b/fe/src/pages/LoginForm/LoginForm.css
@@ -1,3 +1,20 @@
+body{
+    background-image: url("/image/pixel-background.png");
+    background-size: cover;
+    background-repeat: repeat-x;
+    animation: scroll-background 100s linear infinite;
+}
+
+@keyframes scroll-background {
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: -1920px 0;
+    }
+}
+
 #container {
     display: flex;
     justify-content: center;
@@ -5,23 +22,7 @@
     width: 100%;
     height: 100%;
     padding-top: 3%;
-    background-image: url("/image/pixel-background.png");
-    background-size: cover;
-    background-repeat: repeat-x;
-    /* 수평으로 반복 */
-    animation: scroll-background 100s linear infinite;
-    /* 애니메이션 추가 */
-    }
-    
-    /* 애니메이션 정의 */
-    @keyframes scroll-background {
-        0% {
-            background-position: 0 0;
-        }
-    
-        100% {
-            background-position: -1920px 0;
-        }
+    background: none;
     }
 
 #logo-area {
