--- a/fe/src/pages/WaitingRoom/WaitingRoom.css
+++ b/fe/src/pages/WaitingRoom/WaitingRoom.css
@@ -5,9 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aliceblue;
-    justify-content: center;
-    align-items: center;
+    justify-content: center;                                
     text-align: center;
 }
 
@@ -17,16 +15,6 @@
     display: flex;
     flex-direction: column;
     margin: 10px;
-}
-
-/* 전체 스타일 */
-.waiting-room {
-    position: relative;
-    width: 100%;
-    max-width: 50rem;
-    margin: 0 auto;
-    padding: 1rem;
-    text-align: center;
 }
 
 /* 플레이어 그리드 */
@@ -47,15 +35,22 @@
     justify-content: center;
     padding: 0.5rem;
     text-align: center;
+    background-color: white;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    position: relative;
 }
 
-/* 비어 있는 슬롯 스타일 */
-.player-slot.empty {
-    background-color: #e0e0e0;
-    border: 1px dashed #ccc;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.player-slot::before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    border: 2px solid #ccc;
+    border-radius: 6px;
+    pointer-events: none;
 }
 
 .player-ready-status.not-ready {
