--- a/fe/src/pages/WaitingRoom/WaitingRoom.css
+++ b/fe/src/pages/WaitingRoom/WaitingRoom.css
@@ -7,8 +7,8 @@
     text-align: center;
 }
 
-.waitingRoom-background-overlay {
-    position: absolute;
+/* .waitingRoom-background-overlay {
+    position: fixed;
     top: 50%;
     left: 50%;
     width: 60vw;
@@ -20,7 +20,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-}
+} */
 
 .rpgui-content h2 {
     font-size: 1.7em !important;
@@ -100,25 +100,58 @@ button.rpgui-button h2 {
     font-size: 1em;
 }
 
-.modal {
+.countdown-modal {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    padding: 2rem;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: "MoveSans-Bold";
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50%;
+        padding: 2rem;
+        background: transparent;
+        border-radius: 8px;
+        box-shadow: none;
+        font-family: "MoveSans-Bold";
+        color: white;
+        border: none;
+        z-index: 1001;
 }
 
-.modal-overlay {
+.countdown-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    font-family: "MoveSans-Bold";
+    background: transparent;
+    z-index: 1000;
+}
+
+.countdown-modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.countdown-logo {
+    max-width: 60%;
+    height: auto;
+    margin-bottom: 1rem;
+    position: absolute;
+}
+
+.countdown-image {
+    max-width: 30%;
+    height: auto;
+    margin-top: 20rem;
+    position: relative;
+}
+
+.button-group {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7rem;
 }
