--- a/fe/src/pages/RankingPage/RankingPage.css
+++ b/fe/src/pages/RankingPage/RankingPage.css
@@ -6,19 +6,13 @@
     text-align: center;
     min-height: 100vh;
     padding: 20px;
-}
-
-.ranking-section {
-    width: 100%;
-    margin: 1rem 0;
-    flex-grow: 1;
-    overflow-y: auto;
+    justify-content: center;
 }
 
 .ranking-controls {
     display: flex;
     justify-content: center;
-    margin-bottom: 5rem;
+    margin-top: 15rem;
 }
 
 .ranking-controls .rpgui-button h2 {
@@ -29,6 +23,5 @@
 }
 
 .my-ranking {
-    margin-top: 10rem;
-    width: 40%;
+    width: 30%;
 }
