--- a/fe/src/components/GameInformation/GameInformation.css
+++ b/fe/src/components/GameInformation/GameInformation.css
@@ -38,14 +38,15 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
-    width: 80%;
-    max-width: 500px;
+    width: 50%;
+    height: 80%;
     text-align: center;
     z-index: 1001;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .close-button {
@@ -86,13 +87,29 @@
     height: auto;
 }
 
-.slide-image {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 60px;
-}
-
 .custom-heading {
     font-family: "MoveSans-Bold";
     color: #ffffff;
+}
+
+.slide {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.slide-description {
+    font-family: "MoveSans-Bold";
+    color: #ffffff;
+    margin: 20px 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 10px;
+}
+
+.slide-image {
+    max-width: 80%;
+    max-height: 70%;
+    height: auto;
+    object-fit: contain;
+    margin-bottom: 5rem;
 }
